tests/paczka1/fuzzy1/15180007.err
Error in line 5: S180 S288 1,3
Error in line 7: S180 S180 46,6
Error in line 14: S180 A316 35,2
Error in line 18: opR S288 87,7
Error in line 21: S180 A44 56,9
Error in line 31: KCtUhrX S180 76,26
Error in line 35: S180 S288 86,9
Error in line 33: ATeURW0bjq A316 64,5
